tests/invalid/global_variables/non_constant_init.rs
/*
fail: 1
*/

foo: i64 = 3;
bar: i64 = foo + 1;

main(): i32 {
    return bar;
}